--- a/sidebar-and-modal-project/src/Components/Home/Home.module.css
+++ b/sidebar-and-modal-project/src/Components/Home/Home.module.css
@@ -31,6 +31,7 @@
   padding-top: 0.5rem;
   background: var(--white);
   box-shadow: var(--shadow-3);
+  backdrop-filter: blur(4px);
 }
 
 .navContainer {
