--- a/sidebar-and-modal-project/src/Components/Modal/Modal.module.css
+++ b/sidebar-and-modal-project/src/Components/Modal/Modal.module.css
@@ -6,14 +6,14 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-height: 20rem;
+  min-height: 15rem;
   width: 80vw;
   max-width: 500px;
   border-radius: var(--borderRadius);
   padding: 1rem;
   background: #fff;
   z-index: 100;
-  box-shadow: var(--shadow-4);
+  box-shadow: var(--shadow-light-4);
   display: grid;
   justify-items: center;
   align-items: center;
@@ -26,7 +26,7 @@ body {
 .modalContent p {
   margin: 0;
   letter-spacing: var(--letterSpacing);
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 .modalContent a {
@@ -41,4 +41,10 @@ body {
 }
 .cancelBtn {
   composes: cancelBtn from '../Sidebar/Sidebar.module.css';
+}
+
+@media screen and (min-width: 786px) {
+  .modalContent p {
+    font-size: 1.25rem;
+  }
 }
