--- a/sidebar-and-modal-project/src/Components/Sidebar/Sidebar.module.css
+++ b/sidebar-and-modal-project/src/Components/Sidebar/Sidebar.module.css
@@ -2,14 +2,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 50vw;
+  width: calc(110vw + 1rem);
   max-width: 400px;
   height: 100vh;
   background: var(--primary-900);
   box-shadow: var(--shadow-light-4);
   border-radius: 0 2rem 2rem 0;
   z-index: 100;
-  padding-left: 1.5rem;
+  padding-left: 3rem;
 }
 
 .cancelBtn {
@@ -51,7 +51,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding-left: 1rem;
+  padding-left: 2rem;
   gap: 0 0.75rem;
   letter-spacing: var(--letterSpacing);
   text-transform: capitalize;
