--- a/sidebar-and-modal-project/src/Components/Sidebar/Sidebar.module.css
+++ b/sidebar-and-modal-project/src/Components/Sidebar/Sidebar.module.css
@@ -7,7 +7,7 @@
   height: 100vh;
   background: var(--primary-900);
   box-shadow: var(--shadow-light-4);
-  border-radius: 0 2rem 2rem 0;
+  border-radius: 0 3rem 0 0;
   z-index: 100;
   padding-left: 3rem;
 }
