--- a/sidebar-and-modal-project/src/index.css
+++ b/sidebar-and-modal-project/src/index.css
@@ -81,6 +81,35 @@ body {
   font-weight: 400;
   line-height: 1.75;
   color: var(--textColor);
+  /* height: 100vh; */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+body::-webkit-scrollbar {
+  width: 0px;
+  background-color: #f5f5f5;
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #666666;
+}
+
+.scrollbar-thumb {
+  background-color: cyan !important;
+  border-radius: 0.25rem !important;
+  cursor: pointer;
+}
+
+.scrollbar-track-y {
+  background-color: var(--black) !important;
+  border-radius: 0 !important;
 }
 
 p {
